<resources>
    <string name="app_name">让让</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="history_bean_item_image_view_content_description">历史记录照片</string>
    <string name="history_bean_item_text_time">时间：</string>
    <string name="history_bean_item_text_static_time_content">2018年4月20日 15:28:49</string>
    <string name="history_bean_item_text_static_location">地点：</string>
    <string name="history_bean_item_text_static_location_content">杭州电子科技大学学源街</string>
    <string name="history_bean_item_text_delete">删除</string>
    <string name="text_stop">停</string>
    <string name="text_start_record">秒后停止闪光并自动拍摄</string>
    <string name="camera_permission_tip">我们需要手机的相机权限来打开闪光灯和拍摄视频，也需要手机的读写权限来保存和播放您的视频</string>
</resources>
